contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/rbac/fail/missing_env.rs
// UI (trybuild) negative test: `#[has_role]` requires an `Env` parameter.

use soroban_sdk::{contract, contractimpl, Address};

#[contract]
pub struct MyContract;

#[contractimpl]
impl MyContract {
    // Intentionally missing `Env`: should fail during macro expansion.
    #[common_macros::has_role(caller, "minter")]
    pub fn bad(caller: Address) {
        let _ = caller;
    }
}

fn main() {}

